# outclaw

./: .gitignore  .prettierignore  AGENTS.md  LICENSE.txt  README.md  SECURITY.txt  Security.md  checks.sh  eslint.config.js  package-lock.json  package.json  svelte.config.js
.github/workflows/: ci.yml  release.yml
specs/projects/easyclaw/: architecture.md  functional_spec.md  implementation_plan.md  project_overview.md  ui_design.md
specs/projects/gateway-integration-fixes/: architecture.md  functional_spec.md  implementation_plan.md  project_overview.md
specs/projects/outclaw/: architecture.md  functional_spec.md  implementation_plan.md  project_overview.md  ui_design.md
specs/projects/wizard-restart-and-status-fix/: architecture.md  functional_spec.md  implementation_plan.md  project_overview.md
specs/references/: docker-setup.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: docker.rs  instances.rs  mod.rs  releases.rs  security.rs  system.rs
src-tauri/src/docker/: cli.rs  compose_gen.rs  dockerfile_gen.rs  env_gen.rs  fallback_dockerfile.txt  mod.rs  tarball.rs
src-tauri/src/github/: mod.rs  releases.rs
src-tauri/src/instance/: manager.rs  mod.rs  models.rs  names.rs  ports.rs
src-tauri/src/poller/: mod.rs
src-tauri/src/security/: approval.rs  audit.rs  mod.rs  models.rs  rate_limit.rs  sanitize.rs  seccomp.rs  validate.rs
src/routes/: +layout.svelte  +layout.ts  +page.svelte
(+37 files in other folders)
