[package]
name = "outclaw"
version = "0.1.0"
description = "Desktop app for managing OpenClaw instances"
authors = ["you"]
edition = "2021"

[lib]
name = "outclaw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
iana-time-zone = "0.1"
once_cell = "1"

tokio-util = "0.7"
flate2 = "1"
tar = "0.4"
regex = "1"

[dev-dependencies]
tempfile = "3"
